# aperture

./: .gitignore  README.md  design.md  example.mjs  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  ci.yml  release.yml
cli/: README.md  package.json
cli/lib/: download.mjs  index.mjs
examples/: 02-todo.mjs  03-scanner.mjs  04-monitor.mjs  ci-smoke.mjs  empty.mjs  log.mjs  phase2-state.mjs  throw.mjs
phases/: README.md  phase-1-foundation-and-process-model.md  phase-2-state-schema-and-reactivity.md  phase-3-ui-rendering-basics.md  phase-4-runtime-services-and-invoke.md  phase-5-data-elements-and-workers.md  phase-6-cli-caching-and-distribution.md
runtime-shim/: bootstrap.mjs  hooks.mjs  loader.mjs  manifest.mjs  params.mjs  schema-markers.mjs  shim.mjs  state-store.mjs  validate-harness.mjs
runtime-shim/__tests__/: e2e-advanced.test.mjs  e2e-bootstrap.test.mjs  e2e-phase4.test.mjs  e2e-phase5.test.mjs  manifest-extra.test.mjs  manifest.test.mjs  params-extra.test.mjs  params.test.mjs  schema-markers-extra.test.mjs  schema-markers.test.mjs  shim.test.mjs  state-store-extra.test.mjs  state-store.test.mjs
src/: App.tsx  state-bridge.ts  theme.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: activity.rs  cache_key.rs  child.rs  chunks.rs  cli.rs  config.rs  deps.rs  diag.rs  events.rs  fs_layout.rs  invoke_cmds.rs  lib.rs  lock.rs  main.rs  ndjson.rs  remote.rs  subcommands.rs
src/screens/: DeathScreen.tsx  EnvApprovalScreen.tsx  InstallScreen.tsx  RunningScreen.tsx
src/ui/: Element.tsx  InvokeModal.tsx  LogPanel.tsx  ProgressBar.tsx  ProtocolInspector.tsx  UiRoot.tsx  color.ts  cwd.ts  dispatch.ts  formatters.ts  hooks.ts  predicate.ts  shortcuts.tsx  types.ts
src/ui/elements/: alert.tsx  badge.tsx  button.tsx  card.tsx  chart.tsx  checkbox.tsx  code.tsx  column.tsx  divider.tsx  file.tsx  image.tsx  input.tsx  label.tsx  number.tsx  output.tsx  progress.tsx  row.tsx  scroll.tsx  select.tsx  slider.tsx  stat.tsx  table.tsx  tabs.tsx  textarea.tsx  timeline.tsx  tree.tsx
