[package]
name = "aperture"
version = "0.1.0"
description = "Aperture — GUI-native .mjs script runner (Phase 1)"
edition = "2021"
rust-version = "1.77"

[lib]
name = "aperture_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "time", "fs"] }
url = "2"
dirs = "5"
sha2 = "0.10"
hex = "0.4"
fs2 = "0.4"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
once_cell = "1"

[features]
# Default feature set mirrors tauri defaults; custom protocol is not needed in phase 1.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
